# T3000_Building_Automation_System

./: .gitignore  .gitmodules  ACTUAL_RESUMABLE_UPDATE_IMPLEMENTATION.md  AppConfig.props  CMakeLists.txt  FIRMWARE_UPDATE_FLOW.md  LICENSE.txt  README.md  README_Build.md  README_CMake_Build.md  RESUMABLE_FIRMWARE_UPDATE_IMPLEMENTATION_GUIDE.md  ResumableUpdate – Proposed Approach.md  T3000 - VS2010.sln  T3000 - VS2015 -  Platform Version - 10.0.10240.0.sln  T3000 - VS2015.sln  T3000 - VS2017.sln  T3000 - VS2019.sln  T3000-BAS.docx  T3000-VS2015.sln  T3000.aip  T3000.sln  T3000_VS2010.sln  T3000_VS2015.sln  db_psychrometric_project.s3db  history.txt  newFile.txt  notes.txt  product.txt  test.txt  tortoisegit.data  tortoisegit.index
BacNetDllforVc/: BACnet Stack Library - Platform Version - 10.0.10240.0.vcxproj  BACnet Stack Library - VS2019.vcxproj  BACnet Stack Library - VS2019.vcxproj.filters  BACnet Stack Library-VS2010.vcxproj  BACnet Stack Library-VS2015.vcxproj  BACnet Stack Library.vcxproj  BACnet Stack Library.vcxproj.filters  BACnet Stack Library_VS2015.vcxproj  CMakeLists.txt  Testfunction.cpp
FlexSlideBar/: CMakeLists.txt  CalcTics.cpp  CalcTics.h  DllDefine.h  DoubleLinkageOpt.cpp  DoubleLinkageOpt.h  DoubleThumbOpt.cpp  DoubleThumbOpt.h  FSBChannel.cpp  FSBChannel.h  FSBContainer.cpp  FSBContainer.h  FSBThumb.cpp  FSBThumb.h  FlexSlideBar -  Platform Version - 10.0.10240.0.vcxproj  FlexSlideBar -  VS2019.vcxproj  FlexSlideBar -  VS2019.vcxproj.filters  FlexSlideBar - 2015.vcxproj  FlexSlideBar -2010.vcxproj  FlexSlideBar.cpp  FlexSlideBar.def  FlexSlideBar.rc  FlexSlideBar.vcproj  FlexSlideBar.vcxproj  FlexSlideBarDef.h  FlexSlideBar_VS2015.vcxproj  FlexSlideWnd.cpp  FlexSlideWnd.h  MultiThumbOpt.cpp  MultiThumbOpt.h  ReadMe.txt  Resource.h  SingleThumbOpt.cpp  SingleThumbOpt.h  ThumbManager.h  ThumbOperator.cpp  ThumbOperator.h  TripleLinkageOpt.cpp  TripleLinkageOpt.h  TripleThumbOpt.cpp  (+4 more)
ISP/: .gitignore  BacnetMstp.cpp  BacnetMstp.h  BinFileParser.cpp  BinFileParser.h  CMakeLists.txt  ComWriter.cpp  ComWriter.h  ConfigFileHandler.cpp  ConfigFileHandler.h  FlashBase.cpp  FlashBase.h  FlashSN.cpp  FlashSN.h  Flash_SN.cfg  Global_Struct.h  Hex386Writer.cpp  Hex386Writer.h  HexFileParser.cpp  HexFileParser.h  ISP - 2010.vcxproj  ISP - 2015.vcxproj  ISP - Platform Version - 10.0.10240.0.vcxproj  ISP.APS  ISP.cpp  ISP.def  ISP.h  ISP.opensdf  ISP.rc  ISP.sln0  ISP.vcproj  ISP.vcxproj  ISP.vcxproj.filters  ISPDlg.cpp  ISPDlg.h  ISPSetting.cpp  ISPSetting.h  ISP_VS2015.vcxproj  ISP_VS2015.vcxproj.filters  ISP_VS2019.filters  (+44 more)
Modbus Poll/: AddDeviceDlg.cpp  AddDeviceDlg.h  AutoRichEditCtrl.cpp  AutoRichEditCtrl.h  CApplication.h  CDMSChart.cpp  CDMSChart.h  CMakeLists.txt  CRange.h  CRanges.h  CVBDataObject.cpp  CVBDataObject.h  CVBDataObjectFiles.cpp  CVBDataObjectFiles.h  CVcAxis.cpp  CVcAxis.h  CVcAxisGrid.cpp  CVcAxisGrid.h  CVcAxisScale.cpp  CVcAxisScale.h  CVcAxisTitle.cpp  CVcAxisTitle.h  CVcBackdrop.cpp  CVcBackdrop.h  CVcBrush.cpp  CVcBrush.h  CVcCategoryScale.cpp  CVcCategoryScale.h  CVcColor.cpp  CVcColor.h  CVcCoor.cpp  CVcCoor.h  CVcDataGrid.cpp  CVcDataGrid.h  CVcDataPoint.cpp  CVcDataPoint.h  CVcDataPointLabel.cpp  CVcDataPointLabel.h  CVcDataPoints.cpp  CVcDataPoints.h  (+146 more)
MultipleMonthCal32/: CMakeLists.txt  DayControl.cs  MonthControl.Designer.cs  MonthControl.cs  MonthsControl.Designer.cs  MonthsControl.cs  MultipleMonthCal32 - Platform Version - 10.0.10240.0.vcxproj  MultipleMonthCal32 - VS2019.vcxproj  MultipleMonthCal32 - VS2019.vcxproj.filters  MultipleMonthCal32.sln  MultipleMonthCal32.vcxproj  MultipleMonthCalCtrl.cpp  MultipleMonthCalCtrl.h  MultipleMonthCalendar.Designer.cs  MultipleMonthCalendar.cs  Utilities.cs  multiplemonthcal.cpp  multiplemonthcal.h  unicode.h
T3000/: .gitattributes  .gitignore  5EInputDialog.cpp  5EInputDialog.h  AQGraphic.cpp  ARDDlg.cpp  ARDDlg.h  AddBuilding.cpp  AddBuilding.h  AfxMessageDialog.cpp  AfxMessageDialog.h  AirQuality.h  AirflowSettingDlg.cpp  AirflowSettingDlg.h  AllNodesDiaolg.cpp  AllNodesDiaolg.h  AnnualRout_InsertDia.cpp  AnnualRout_InsertDia.h  Annual_Routines.cpp  Annual_Routines.h  ApplyGraphicLabelsDlg.cpp  ApplyGraphicLabelsDlg.h  AutoComplete.cxx  AutoComplete.h  AutoRichEditCtrl.cpp  AutoRichEditCtrl.h  BACnet_Stack_Library.lib  BTUMeterDlg.cpp  BTUMeterDlg.h  BacnetATCommand.cpp  BacnetATCommand.h  BacnetAddLabel.cpp  BacnetAddLabel.h  BacnetAddRemoteDevice.cpp  BacnetAddRemoteDevice.h  BacnetAddVirtualDevice.cpp  BacnetAddVirtualDevice.h  BacnetAlarmLog.cpp  BacnetAlarmLog.h  BacnetAlarmWindow.cpp  (+641 more)
T3000Controls/: CMakeLists.txt  T3000Control.snk  T3000Controls.csproj  T3000Controls.sln  project.json  project.lock.json
T3000ProgramMoudle/: CMakeLists.txt  HowToUseT3000 Interpreter DLL.docx  PARSER.H  T3000DEF.H  T3000ProgramMoudle.sln  T3000ProgramMoudle.vcxproj  T3000ProgramMoudle.vcxproj.filters  dllmain.cpp  dllmain.h  framework.h  global_define.h  global_function.cpp  global_function.h  pch.cpp  pch.h  scan.cpp  stdafx.cpp  stdafx.h  targetver.h
TemcoStandardBacnetToolScr/: AlarmSummary.Designer.cs  AlarmSummary.cs  BACnetBase.cs  BACnetClient.cs  BACnetTransport.cs  BACnetTransportIPv6.cs  BBMDEditor.Designer.cs  BBMDEditor.cs  BacnetTransportEthernet.cs  CMakeLists.txt  CalendarEditor.Designer.cs  CalendarEditor.cs  ComUtilities.cs  CreateObject.Designer.cs  CreateObject.cs  CreateObject.resx  DeviceCommunicationControlDialog.Designer.cs  DeviceCommunicationControlDialog.cs  FileTransfers.cs  ForeignRegistry.cs  ForeignRegistry.designer.cs  GenericInputBox.cs  MainDialog.Designer.cs  MainDialog.cs  MainDialog.resx  NotificationEditor.cs  NotificationEditor.designer.cs  NotificationEditor.resx  Program.cs  ProgressDialog.Designer.cs  ProgressDialog.cs  ReadSinglePropDescrDefault.xml  ScheduleDisplay.Designer.cs  ScheduleDisplay.cs  ScheduleDisplay.resx  SearchDialog.Designer.cs  SearchDialog.cs  SettingsDialog.Designer.cs  SettingsDialog.cs  SourceAddressDialog.Designer.cs  (+11 more)
Update/: CMakeLists.txt  MFC16API.h  MFC16API.lib  README.md  ReadMe.txt  ULRBindCallback.cpp  ULRBindCallback.h  (+12 more)
(+4149 files in other folders)
